prevent scroll on mobile menu

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -56,6 +56,10 @@ $hamburger-active-hover-opacity: $hamburger-hover-opacity !default;
 
 body {
 	@extend .bg-primary;
+
+	&.menu-open {
+		overflow: hidden;
+	}
 }
 
 section {
